--- a/Project1/index.html
+++ b/Project1/index.html
@@ -175,7 +175,7 @@
                     </div>
                     <div class="call">
                         <img src="img/call.png" alt="">
-                        <a href="">call +91 9215486780</a>
+                        <a href="">call: +91 9215486780</a>
 
                     </div>
 
